bug fixes spacing home

--- a/front/src/components/Home/RecentMentors/styles.scss
+++ b/front/src/components/Home/RecentMentors/styles.scss
@@ -2,7 +2,6 @@
 
 .latestMentor {
   // border: 1px vars.$primaryColor solid;
-  margin-top: 4rem;
 
   &-span {
     color: v.$color-theme1;
@@ -19,8 +18,7 @@
 
   &-container {
     padding: v.$gutter;
-    padding-bottom: 6.5rem;
-    margin-bottom: 4rem;
+    padding-bottom: 4rem;
   }
 
   &-list {
